--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ table {
 <p class="normal">We love the traits and family tree of R:TW.
 				</p></center>
 
-				<center><div class=col-3><img height=100px src=images/logoEB.png>
+				<center><div class=col-3><img height=100px src=images/logoeb.png>
 				<p class="bright">EUROPA BARBARORUM</b></p><br>
 				
 <p class="normal">We love the realism and depth of this mod for R:TW.
