--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head> <meta charset=utf-8> <meta name=description> <meta name=viewport content="width=device-width, initial-scale=1">
 		<title>Historia Realis: ROMA</title> <link rel=apple-touch-icon href=apple-touch-icon.png>  <link rel=stylesheet href=styles/main.css>
-<meta property="og:image" content="roguemance/RoguemanceThumb011.jpg">
+<meta property="og:image" content="images/007.jpg">
 
 <style>
 table, td, th {
@@ -19,7 +19,7 @@ table {
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-<meta name="og:image" content="http://roguemance.com/roguemance/RoguemanceThumb011.jpg" />
+<meta name="og:image" content="http://historiarealis.com/images/007.jpg" />
 
 
 
