--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ table {
 <div class=info>
 	<div class=screenshots>
 		<div class=row><center>
-<div class=col-4 style="width:190px margin-left:20%">
+<div class=col-4>
 				<p class="bright">BE A <b>ROMAN</b></p><br>
 				
 <p class="normal">Do you want to be an ambitious young roman?<br><br>You will serve in the legions with distinction, then start your political career by taking loans and making promises. Rise through the offices of the <i>cursus honorum</i>, starting as a Tribune or Quaestor and making it all the way up to Praetor and Consul.
@@ -164,7 +164,7 @@ table {
 
 <div class=info>
 
-<div class=paintings>
+<div class=screenshots>
 <center>
 
 <p class="bright">SIGN UP FOR THE ALPHA</p>
