--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ table {
 
 <div class=screenshots>
 
-	<center><p class="bigred">THE PILLARS OF <i>HISTORIA REALIS</i></p></center>
+	<center><p class="bigred">INFLUENCES - GAMES WE LOVE</p></center>
 
 		<div class=row>
 			<center>
