--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ table {
 <div class=col-4 style="width:190px margin-left:20%">
 				<p class="bright">Hi, I'm <b>Lucas</b>!</b></p><br>
 				
-<p class="normal">I'm an award-winning indie game developer from Brazil.<br><br>I started making games as a hobby in 2012, while getting my master's degree in History. I was a History teacher for 3 years and made games in my spare time.<br><br>I released 2 games on Steam: Painters Guild and Roguemance.<br><br>I love History and games. I do art, code, design, music, marketing and pretty much everything in my games.<br><br>My favorite historical period is Republican Rome, so Historia Realis: Roma is a very dear project to me.<br><br>Thanks for your interest in my game! You can follow me on <a href="https://twitter.com/AD1337">Twitter</a>.
+<p class="normal">I'm an award-winning indie game developer from Brazil.<br><br>I started making games as a hobby in 2012, while getting my master's degree in History. I was a History teacher for 3 years and made games in my spare time.<br><br>I released 2 games on Steam: <a href="https://store.steampowered.com/app/384550/Painters_Guild/">Painters Guild</a> and <a href="https://store.steampowered.com/app/742530/Roguemance/">Roguemance</a>.<br><br>I love History and games. I do art, code, design, music, marketing and pretty much everything in my games.<br><br>My favorite historical period is Republican Rome, so Historia Realis: Roma is a very dear project to me.<br><br>Thanks for your interest in my game! You can follow me on <a href="https://twitter.com/AD1337">Twitter</a>.
 				</p></center></div>
 
 
