--- a/index.html
+++ b/index.html
@@ -113,6 +113,25 @@ table {
 
 
 
+<div class=row></div>
+
+
+<div class=info>
+
+<div class=paintings>
+<center>
+<br>
+<p class="bright">NOW ON PATREON!</p>
+
+<a href="https://www.patreon.com/bePatron?u=5270377" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
+
+</center>
+</div>		
+
+</div>
+<div class=row></div>
+
+
 
 
 <div class=bar></div>
