--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ table {
 <center>
 <br>
 <p class="bright">NOW ON PATREON!</p>
-
+<center>
 <a href="https://www.patreon.com/bePatron?u=5270377" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 
 </center>
