--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ table {
 				<br><br>Or perhaps you will be murdered long before that, leaving your son to avenge you.
 				</p></center>
 
-			<div class=col-4> <a href="images/mockup012.png"><img width=99% src=images/mockup012.png></a></div>
+			<div class=col-4> <a href="images/character.png"><img width=99% src=images/character.png></a></div>
 
 	</div>
 
@@ -93,7 +93,7 @@ table {
 
 <div class=info>
 	<div class=screenshots>
-		<div class=row><center> <div class=col-4> <a href="images/mockup015.png"><img width=99% src=images/mockup015.png></a></div>
+		<div class=row><center> <div class=col-4> <a href="images/timeline.png"><img width=99% src=images/timeline.png></a></div>
 <div class=col-4 style="width:190px margin-left:20%">
 				<p class="bright">INTRODUCING THE<br><b>TIMELINE</b></p><br>
 				
@@ -419,12 +419,12 @@ table {
 <center>
 <p class="bright">JOIN US!</p> 
 
+<a href="https://discord.gg/xtPa3hE"><img width=80px src=images/icondiscord.png></a>
 <a href="https://www.reddit.com/r/historiarealis/"><img width=80px src=images/IconReddit.png></a>
 <a href="https://www.facebook.com/historiarealis/"><img width=80px src=images/iconfb.png></a>
 <a href="https://www.instagram.com/historiarealis/"><img width=80px src=images/iconinsta.png></a>
 <a href="https://twitter.com/historiarealis"><img width=80px src=images/icontwitter.png></a>
 <a href="https://www.twitch.tv/lucasgmolina"><img width=80px src=images/icontwitch.png></a>
-<a href="https://discord.gg/xtPa3hE"><img width=80px src=images/icondiscord.png></a>
 
 <div class=row>
 <div class=bar>
