--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ table {
 		<p class="normal">We'll do our best.</p>
 
 		<p class="bigred">Is there any way I can donate or help support this project?</p>
-		<p class="normal">Not yet, but sign up for our mailing list and I'll let you know when you can.</p>
+		<p class="normal">Yes! A lot of people were asking this, so we made a <a href="https://patreon.com/HistoriaRealis">Patreon</a> page where you get cool benefits in return for your donations.</p>
 
 		<p class="bigred">Will you mod Imperator?</p>
 		<p class="normal">Yes. I'll do my best to bring the principles of Historia Realis into Imperator.</p>
