--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@ table {
 			</tr>
 
 			<tr>
-				<td><p class="normal"><b>1 Consul</b> in Rome for "gameplay reasons".</p></th>
-				<td><p class="normal"><b>2 Consuls</b>, as it was in Rome.</th>
+				<td><p class="normal"><b>1 Consul</b> in Rome.</p></th>
+				<td><p class="normal"><b>2 Consuls</b> in Rome.</th>
 			</tr>
 
 			<tr>
