--- a/recruiting/index.html
+++ b/recruiting/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqnamUBuGCLWM4tcc9fn9643bTiWFC--u3pL-IhhbSPFULkQ/viewform?embedded=true" width="840" height="2170" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<center><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScqnamUBuGCLWM4tcc9fn9643bTiWFC--u3pL-IhhbSPFULkQ/viewform?embedded=true" width="840" height="2170" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
