--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ table {
 <p class="normal">Serve in the legions or study rhetoric. Become a lawyer or a conqueror. Then perhaps be assassinated for your ideals, leaving your son to avenge you. It's your story!
 				</p></center>
 
-			<div class=col-4> <img src=images/Char1.png></div>
+			<div class=col-4> <img src=images/char1.png></div>
 
 	</div>
 
