--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ table {
 <p class="normal">Serve in the legions or study rhetoric. Become a lawyer or a conqueror. Then perhaps be assassinated for your ideals, leaving your son to avenge you. It's your story!
 				</p></center>
 
-			<div class=col-4> <img src=images/char1.png></div>
+			<div class=col-4> <img width=100%  src=images/char1.png></div>
 
 	</div>
 
@@ -116,7 +116,7 @@ table {
 
 <div class=info>
 	<div class=screenshots2>
-		<div class=row><center> <div class=col-4> <img src=images/electionsevent.png></a></div>
+		<div class=row><center> <div class=col-4> <img width=100%  src=images/electionsevent.png></a></div>
 <div class=col-4 style="width:190px margin-left:20%">
 	<img width=90px src=images/squarewreath.png>
 				<p class="bright">RUN FOR OFFICE</b></p>
@@ -147,7 +147,7 @@ table {
 <p class="normal">There's no set story, you make yours by playing. Assassinate rivals, make friendships, seduce lovers, betray allies – history is yours to rewrite!
 				</p></center>
 
-			<div class=col-4> <a href="images/Events.gif"><img src=images/Events3.gif></a></div>
+			<div class=col-4><img width=100% src=images/Events3.gif></a></div>
 
 	</div>
 
