--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@ table {
 		<div class=row><center>
 <div class=col-4>
 <img width=90px src=images/squarequill.png>
-				<p class="bright">MAKE YOUR OWN HISTORY</p>
+				<center><p class="bright">MAKE YOUR OWN HISTORY</p>
 				<p class="bright4"><i>Assassinations, festivals, banquets, speeches...</i></p>
 				
-<p class="normal">There's no set story, you make yours by playing. Assassinate rivals, make friendships, seduce lovers, betray allies – history is yours to rewrite!
+<p class="normal">There's no set story, you make yours by playing. Assassinate rivals, make friendships, seduce lovers, betray allies – history is yours to rewrite!</center>
 				</p></center>
 
-			<div class=col-4><img width=100% src=images/Events3.gif></a></div>
+			<center><div class=columnFlex2><img src=images/Events3.gif></div></center>
 
 	</div>
 
@@ -158,15 +158,6 @@ table {
 </div>
 
 </div>
-
-
-
-
-
-
-
-
-
 
 
 
