--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="mx-auto text-center">
                     <img src="images/logo22.png" class="img-fluid" alt=""> 
                     <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5> 
-                    <a href="file:///D:/Projects/Vidya/HistoriaRealis/index.html#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
+                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
                 </div>
             </div>             
         </header>
