--- a/_pgbackup/index_1688049953.html
+++ b/_pgbackup/index_1688049953.html
@@ -48,13 +48,13 @@
                 <div class="mx-auto text-center">
                     <img src="images/logo22.png" class="img-fluid" alt=""> 
                     <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5> 
-                    <a href="file:///D:/Projects/Vidya/HistoriaRealis/index.html#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
+                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
                 </div>
             </div>             
         </header>
         <!-- About Section -->
         <section class="about-section bg-black text-center">
-            <img src="images/screenshot002.png" alt="" class="img-fluid">
+            <img src="images/screenshot002.png" alt="" style="max-width: 1920;" class="img-fluid" width="1400">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
@@ -89,7 +89,7 @@
                 <!-- Project Zero Row -->                 
                 <div class="row justify-content-center no-gutters"> 
                     <div class="col-lg-6"> 
-                        <img class="img-fluid" src="images/estate.png" alt=""> 
+                        <img class="img-fluid" src="images/illus2.png" alt=""> 
                     </div>                     
                     <div class="col-lg-6 order-lg-first"> 
                         <div class="text-center h-100 project"> 
@@ -107,7 +107,7 @@
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0"> 
                     <div class="col-lg-6"> 
                         <center> 
-                            <img class="img-fluid" src="images/Reading2.png" alt=""> 
+                            <img class="img-fluid" src="images/illus1.png" alt=""> 
                         </center>                         
                     </div>                     
                     <div class="col-lg-6"> 
@@ -232,6 +232,7 @@
             <div class="container"> 
                 <div class="row"> 
                     <div class="col-md-10 col-lg-8 mx-auto text-center"> 
+                        <img src="images/crown.png" width="10%">
                         <h2 class="text-white mb-5">Sign up for the alpha!</h2> 
                         <form class="form-inline d-flex" style="border:0px solid #ccc;padding:0px;text-align:center;" action="https://tinyletter.com/HistoriaRealis" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/HistoriaRealis', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"> 
                             <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address..." name="email"> 
@@ -258,9 +259,9 @@
         <!-- Footer -->         
         <footer class="bg-black small text-center text-white-50">
             <div class="container" style="margin-top: 10; padding-bottom: 10;"> 
-                <p><i class="far fa-envelope"></i> lucas@historiarealis.com </p> 
+                <p><i class="far fa-envelope"></i><a href="mailto:lucas@historiarealis.com"> lucas@historiarealis.com</a></p> 
                 <p><i>"Historia vero testis temporum, lux veritatis, vita memoriae, magistra vitae, nuntia vetustatis."</i></p>
-                <p>History: witness of time, light of truth, life of memory, life's teacher, herald of antiquity."</p>– Marcus Tullius Cicero
+                <p>"History: witness of time, light of truth, life of memory, life's teacher, herald of antiquity."</p>– Marcus Tullius Cicero
             </div>
         </footer>         
         <!-- Bootstrap core JavaScript -->         
