--- a/_pgbackup/index_1692976358.html
+++ b/_pgbackup/index_1692976358.html
@@ -43,18 +43,18 @@
             </div>             
         </nav>         
         <!-- Header -->         
-        <header class="masthead"> 
+        <header class="masthead">
             <div class="container d-flex h-100 align-items-center" id="about"> 
                 <div class="mx-auto text-center">
                     <img src="images/logo22.png" class="img-fluid" alt=""> 
-                    <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5> 
-                    <a href="file:///D:/Projects/Vidya/HistoriaRealis/index.html#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
+                    <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5>
+                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 </div>
-            </div>             
+            </div>
         </header>
         <!-- About Section -->
         <section class="about-section bg-black text-center">
-            <img src="images/screenshot002.png" alt="" style="max-width: 1920;" class="img-fluid" width="140">
+            <img src="images/screenshot002.png" alt="" style="max-width: 1920;" class="img-fluid" width="1400">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
@@ -79,7 +79,8 @@
                     <div class="col"> 
                         <p class="tag">Simulation</p> 
                     </div>                     
-                </div>                 
+                </div>
+                <a href="https://store.steampowered.com/app/2560540/Historia_Realis_Rome/" target="_blank" class="btn js-scroll-trigger btn-dark">WISHLIST ON STEAM</a> 
             </div>
         </section>
         <!-- Projects Section -->         
@@ -89,7 +90,7 @@
                 <!-- Project Zero Row -->                 
                 <div class="row justify-content-center no-gutters"> 
                     <div class="col-lg-6"> 
-                        <img class="img-fluid" src="images/estate.png" alt=""> 
+                        <img class="img-fluid" src="images/illus2.png" alt=""> 
                     </div>                     
                     <div class="col-lg-6 order-lg-first"> 
                         <div class="text-center h-100 project"> 
@@ -107,14 +108,14 @@
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0"> 
                     <div class="col-lg-6"> 
                         <center> 
-                            <img class="img-fluid" src="images/Reading2.png" alt=""> 
+                            <img class="img-fluid" src="images/illus1.png" alt=""> 
                         </center>                         
                     </div>                     
                     <div class="col-lg-6"> 
                         <div class="text-center h-100 project"> 
                             <div class="d-flex h-100"> 
                                 <div class="project-text w-100 my-auto text-center text-lg-left"> 
-                                    <h4 class="text-white">Run for office</h4> 
+                                    <h4 class="text-white">Run for political offices</h4> 
                                     <p class="mb-0 text-white-50">Rise through the offices of the <i>Cursus Honorum</i>, starting as a Tribune or Quaestor and making it all the way up to Consul.<br></p> 
                                     <hr class="d-none d-lg-block mb-0 ml-0"> 
                                 </div>                                 
@@ -188,7 +189,7 @@
                 <div class="row"> 
                     <div class="col-md-10 col-lg-8 mx-auto text-center"> 
                         <h2 class="text-white mb-5"></h2> 
-                        <a href="https://discord.gg/xtPa3hE" target="_blank"><img src="images/discord2.png" width="50%" class="img-fluid img-discord" alt=""></a> 
+                        <a href="https://discord.gg/xtPa3hE" target="_blank"><img src="images/discord3.png" width="50%" class="img-fluid img-discord" alt=""></a> 
                     </div>                     
                 </div>                 
             </div>             
@@ -232,6 +233,7 @@
             <div class="container"> 
                 <div class="row"> 
                     <div class="col-md-10 col-lg-8 mx-auto text-center"> 
+                        <img src="images/crown.png" width="10%">
                         <h2 class="text-white mb-5">Sign up for the alpha!</h2> 
                         <form class="form-inline d-flex" style="border:0px solid #ccc;padding:0px;text-align:center;" action="https://tinyletter.com/HistoriaRealis" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/HistoriaRealis', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"> 
                             <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address..." name="email"> 
@@ -258,9 +260,9 @@
         <!-- Footer -->         
         <footer class="bg-black small text-center text-white-50">
             <div class="container" style="margin-top: 10; padding-bottom: 10;"> 
-                <p><i class="far fa-envelope"></i> lucas@historiarealis.com </p> 
+                <p><i class="far fa-envelope"></i><a href="mailto:lucas@historiarealis.com"> lucas@historiarealis.com</a></p> 
                 <p><i>"Historia vero testis temporum, lux veritatis, vita memoriae, magistra vitae, nuntia vetustatis."</i></p>
-                <p>History: witness of time, light of truth, life of memory, life's teacher, herald of antiquity."</p>– Marcus Tullius Cicero
+                <p>"History: witness of time, light of truth, life of memory, life's teacher, herald of antiquity."</p>– Marcus Tullius Cicero
             </div>
         </footer>         
         <!-- Bootstrap core JavaScript -->         
