--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
             </div>             
         </nav>         
         <!-- Header -->         
-        <header class="masthead"> 
+        <header class="masthead">
             <div class="container d-flex h-100 align-items-center" id="about"> 
                 <div class="mx-auto text-center">
                     <img src="images/logo22.png" class="img-fluid" alt=""> 
-                    <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5> 
-                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
+                    <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5>
+                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 </div>
-            </div>             
+            </div>
         </header>
         <!-- About Section -->
         <section class="about-section bg-black text-center">
@@ -79,7 +79,8 @@
                     <div class="col"> 
                         <p class="tag">Simulation</p> 
                     </div>                     
-                </div>                 
+                </div>
+                <a href="https://store.steampowered.com/app/2560540/Historia_Realis_Rome/" target="_blank" class="btn js-scroll-trigger btn-dark">WISHLIST ON STEAM</a> 
             </div>
         </section>
         <!-- Projects Section -->         
@@ -208,7 +209,7 @@
                             <div class="d-flex h-100"> 
                                 <div class="project-text w-100 my-auto text-center text-lg-left"> 
                                     <h4 class="text-white mb-lg-3">Hi, I'm Lucas!</h4> 
-                                    <p class="mb-0 text-white-50">I’m a former history teacher who decided to make games. <br><br>I started as a hobby in 2012 during my master's degree in History. I fell in love with making games, so I went on to make <a href="https://store.steampowered.com/app/384550/Painters_Guild/" target="_blank">Painters Guild</a> (an art academy management sim) and <a href="https://store.steampowered.com/app/742530/Roguemance/" target="_blank">Roguemance</a> (a roguelite with romance). <br><br>Historia Realis is my dream game. It takes you to Republican Rome and lets you do everything that the Romans did back then: socialize at the baths, sacrifice to the gods, and, of course, backstab your friends and eliminate your enemies! <br><br>You can follow me on <a href="https://twitter.com/AD1337" target="_blank">Twitter</a>. <br><br>Thanks! <i class="far fa-heart"></i></p> 
+                                    <p class="mb-0 text-white-50">I’m a former history teacher who decided to make games. <br><br>I started as a hobby in 2012 during my master's degree in History. I fell in love with making games, so I went on to make <a href="https://store.steampowered.com/app/384550/Painters_Guild/" target="_blank">Painters Guild</a> (an art academy management sim) and <a href="https://store.steampowered.com/app/742530/Roguemance/" target="_blank">Roguemance</a> (a roguelite with romance). Oh, and I also made <a href="https://store.steampowered.com/app/1895970/Robotherapy/">Robotherapy</a>, a narrative game about robots doing therapy!<br><br>Historia Realis is my dream game. It takes you to Republican Rome and lets you do everything that the Romans did back then: socialize at the baths, sacrifice to the gods, and, of course, backstab your friends and eliminate your enemies! <br><br>You can follow me on <a href="https://twitter.com/AD1337" target="_blank">Twitter</a>. <br><br>Thanks! <i class="far fa-heart"></i></p> 
                                     <center> 
 </center>                                     
                                 </div>
@@ -237,7 +238,7 @@
                         <form class="form-inline d-flex" style="border:0px solid #ccc;padding:0px;text-align:center;" action="https://tinyletter.com/HistoriaRealis" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/HistoriaRealis', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"> 
                             <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address..." name="email"> 
                             <input type="hidden" value="1" name="embed"/> 
-                            <input type="submit" class="btn btn-primary mx-auto" value="Become a Roman"/> 
+                            <input type="submit" class="btn btn-primary mx-auto" value="BECOME A ROMAN"/> 
                         </form>                         
                         <center></center>                         
                     </div>                     
