--- a/_pgbackup/index_1708707531.html
+++ b/_pgbackup/index_1708707531.html
@@ -43,14 +43,14 @@
             </div>             
         </nav>         
         <!-- Header -->         
-        <header class="masthead"> 
+        <header class="masthead">
             <div class="container d-flex h-100 align-items-center" id="about"> 
                 <div class="mx-auto text-center">
                     <img src="images/logo22.png" class="img-fluid" alt=""> 
-                    <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5> 
-                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>
+                    <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5>
+                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 </div>
-            </div>             
+            </div>
         </header>
         <!-- About Section -->
         <section class="about-section bg-black text-center">
@@ -79,7 +79,8 @@
                     <div class="col"> 
                         <p class="tag">Simulation</p> 
                     </div>                     
-                </div>                 
+                </div>
+                <a href="https://store.steampowered.com/app/2560540/Historia_Realis_Rome/" target="_blank" class="btn js-scroll-trigger btn-dark">WISHLIST ON STEAM</a> 
             </div>
         </section>
         <!-- Projects Section -->         
@@ -208,7 +209,7 @@
                             <div class="d-flex h-100"> 
                                 <div class="project-text w-100 my-auto text-center text-lg-left"> 
                                     <h4 class="text-white mb-lg-3">Hi, I'm Lucas!</h4> 
-                                    <p class="mb-0 text-white-50">I’m a former history teacher who decided to make games. <br><br>I started as a hobby in 2012 during my master's degree in History. I fell in love with making games, so I went on to make <a href="https://store.steampowered.com/app/384550/Painters_Guild/" target="_blank">Painters Guild</a> (an art academy management sim) and <a href="https://store.steampowered.com/app/742530/Roguemance/" target="_blank">Roguemance</a> (a roguelite with romance). <br><br>Historia Realis is my dream game. It takes you to Republican Rome and lets you do everything that the Romans did back then: socialize at the baths, sacrifice to the gods, and, of course, backstab your friends and eliminate your enemies! <br><br>You can follow me on <a href="https://twitter.com/AD1337" target="_blank">Twitter</a>. <br><br>Thanks! <i class="far fa-heart"></i></p> 
+                                    <p class="mb-0 text-white-50">I’m a former history teacher who decided to make games. <br><br>I started as a hobby in 2012 during my master's degree in History. I fell in love with making games, so I went on to make <a href="https://store.steampowered.com/app/384550/Painters_Guild/" target="_blank">Painters Guild</a> (an art academy management sim) and <a href="https://store.steampowered.com/app/742530/Roguemance/" target="_blank">Roguemance</a> (a roguelite with romance). Oh, and I also made <a href="https://store.steampowered.com/app/1895970/Robotherapy/">Robotherapy</a>, a narrative game about robots doing therapy!<br><br>Historia Realis is my dream game. It takes you to Republican Rome and lets you do everything that the Romans did back then: socialize at the baths, sacrifice to the gods, and, of course, backstab your friends and eliminate your enemies! <br><br>You can follow me on <a href="https://twitter.com/AD1337" target="_blank">Twitter</a>. <br><br>Thanks! <i class="far fa-heart"></i></p> 
                                     <center> 
 </center>                                     
                                 </div>
@@ -220,29 +221,19 @@
                 <div class="row justify-content-center no-gutters mt-4 mb-4 mb-lg-5"> 
                     <div class="col-xl"> 
                         <div class="featured-text text-center text-center"> 
-                            <h4 class="text-white mb-lg-3">Let's make Historia Realis together!</h4> 
-                            <p class="mb-0 text-white-50">Historia Realis is being developed by the community, for the community.&nbsp;<span style="font-size: 1rem; letter-spacing: 0.0625em;">We not only listen to player feedback (especially on </span><a href="https://discord.gg/xtPa3hE" target="_blank" style="font-size: 1rem; letter-spacing: 0.0625em;">Discord</a><span style="font-size: 1rem; letter-spacing: 0.0625em;">), but we go beyond and actually hire players to help develop the game.&nbsp;</span><p class="text-white-50"><br>If you'd like to work with us, please take a look at <a href="http://recruiting.historiarealis.com/" target="_blank">this form</a>. We'd be glad to have you!</p></p> 
+                            <img src="images/crown.png" width="10%">
+                            <h2 class="text-white mb-lg-3">Sign up for the alpha!</h2> 
+                            <p class="mb-0 text-white-50">Historia Realis is being developed by the community, for the community.&nbsp;<span style="font-size: 1rem; letter-spacing: 0.0625em;">We not only listen to player feedback (especially on </span><a href="https://discord.gg/xtPa3hE" target="_blank" style="font-size: 1rem; letter-spacing: 0.0625em;">Discord</a><span style="font-size: 1rem; letter-spacing: 0.0625em;">), but we go beyond and actually hire players to help develop the game.&nbsp;</span><p class="text-white-50"><br>If you'd like to work with us, please take a look at <a href="http://recruiting.historiarealis.com/" target="_blank">this form</a>. We'd be glad to have you!</p></p>
                         </div>                         
                     </div>                     
                 </div>                 
             </div>             
         </section>         
         <!-- Signup Section -->         
-        <section id="signup" class="signup-section"> 
-            <div class="container"> 
-                <div class="row"> 
-                    <div class="col-md-10 col-lg-8 mx-auto text-center"> 
-                        <img src="images/crown.png" width="10%">
-                        <h2 class="text-white mb-5">Sign up for the alpha!</h2> 
-                        <form class="form-inline d-flex" style="border:0px solid #ccc;padding:0px;text-align:center;" action="https://tinyletter.com/HistoriaRealis" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/HistoriaRealis', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"> 
-                            <input type="text" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address..." name="email"> 
-                            <input type="hidden" value="1" name="embed"/> 
-                            <input type="submit" class="btn btn-primary mx-auto" value="Become a Roman"/> 
-                        </form>                         
-                        <center></center>                         
-                    </div>                     
-                </div>                 
-            </div>             
+        <section class="pg-empty-placeholder">
+            <center>
+                <iframe src="https://historiarealis.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+            </center>
         </section>         
         <!-- Contact Section -->         
         <section class="contact-section bg-black"> 
