--- a/_pgbackup/index_1710865165.html
+++ b/_pgbackup/index_1710865165.html
@@ -36,7 +36,7 @@
                             <a class="nav-link js-scroll-trigger" href="#discord">Development</a> 
                         </li>                         
                         <li class="nav-item"> 
-                            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a> 
+                            <a class="nav-link js-scroll-trigger" href="#discord">Contact</a> 
                         </li>                         
                     </ul>                     
                 </div>                 
@@ -48,7 +48,9 @@
                 <div class="mx-auto text-center">
                     <img src="images/logo22.png" class="img-fluid" alt=""> 
                     <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5>
-                    <a href="#signup" target="_blank" class="btn btn-primary js-scroll-trigger">SIGN UP FOR THE ALPHA</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                    <a href="https://store.steampowered.com/app/2560540/Historia_Realis_Rome/" target="_blank" class="btn js-scroll-trigger btn-dark">WISHLIST ON STEAM</a>
+                    <h1></h1>
+                    <a target="_blank" class="btn btn-primary js-scroll-trigger" href="#signup">SIGN UP FOR THE ALPHA</a>
                 </div>
             </div>
         </header>
@@ -80,7 +82,6 @@
                         <p class="tag">Simulation</p> 
                     </div>                     
                 </div>
-                <a href="https://store.steampowered.com/app/2560540/Historia_Realis_Rome/" target="_blank" class="btn js-scroll-trigger btn-dark">WISHLIST ON STEAM</a> 
             </div>
         </section>
         <!-- Projects Section -->         
@@ -220,36 +221,23 @@
                 <!-- Creator Row 2 -->                 
                 <div class="row justify-content-center no-gutters mt-4 mb-4 mb-lg-5"> 
                     <div class="col-xl"> 
-                        <div class="featured-text text-center text-center"> 
-                            <img src="images/crown.png" width="10%">
-                            <h2 class="text-white mb-lg-3">Sign up for the alpha!</h2> 
-                            <p class="mb-0 text-white-50">Historia Realis is being developed by the community, for the community.&nbsp;<span style="font-size: 1rem; letter-spacing: 0.0625em;">We not only listen to player feedback (especially on </span><a href="https://discord.gg/xtPa3hE" target="_blank" style="font-size: 1rem; letter-spacing: 0.0625em;">Discord</a><span style="font-size: 1rem; letter-spacing: 0.0625em;">), but we go beyond and actually hire players to help develop the game.&nbsp;</span><p class="text-white-50"><br>If you'd like to work with us, please take a look at <a href="http://recruiting.historiarealis.com/" target="_blank">this form</a>. We'd be glad to have you!</p></p>
-                        </div>                         
-                    </div>                     
+</div>                     
                 </div>                 
             </div>             
         </section>         
         <!-- Signup Section -->         
-        <section class="pg-empty-placeholder">
-            <center>
+        <section>
+            <center class="signup-section">
+                <div class="text-center"> 
+                    <h2 class="text-white mb-lg-3">Sign up for the alpha!</h2> 
+                </div>
                 <iframe src="https://historiarealis.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
             </center>
         </section>
-        <section id="signup" class="signup-section"></section>
-        <section id="discord" class="pb-5 discord-section"> 
-            <div class="container"> 
-                <div class="row"> 
-                    <div class="col-md-10 col-lg-8 mx-auto text-center"> 
-                        <h2 class="text-white mb-5"></h2> 
-                        <a href="https://discord.gg/xtPa3hE" target="_blank"><img src="images/discord3.png" width="50%" class="img-fluid img-discord" alt=""></a> 
-                    </div>                     
-                </div>                 
-            </div>             
-        </section>
-        <div class="row">              
+        <div class="row"> 
 </div>         
         <!-- Contact Section -->         
-        <section class="contact-section bg-black"> 
+        <section class="bg-black contact-section"> 
             <div class="container"> 
                 <div class="row"> 
                     <div class="social d-flex justify-content-center col mt-5"> 
