--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <a class="nav-link js-scroll-trigger" href="#discord">Development</a> 
                         </li>                         
                         <li class="nav-item"> 
-                            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a> 
+                            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a> 
                         </li>                         
                     </ul>                     
                 </div>                 
@@ -50,7 +50,7 @@
                     <h5 class="text-white mx-auto mt-4 mb-5 smaller">A historical drama simulator by <a href="https://twitter.com/ad1337">Lucas Molina</a></h5>
                     <a href="https://store.steampowered.com/app/2560540/Historia_Realis_Rome/" target="_blank" class="btn js-scroll-trigger btn-dark">WISHLIST ON STEAM</a>
                     <h1></h1>
-                    <a target="_blank" class="btn btn-primary js-scroll-trigger" href="https://historiarealis.substack.com">SIGN UP FOR THE ALPHA</a>
+                    <a target="_blank" class="btn btn-primary js-scroll-trigger" href="#signup">SIGN UP FOR THE ALPHA</a>
                 </div>
             </div>
         </header>
@@ -220,14 +220,14 @@
                 </div>                 
                 <!-- Creator Row 2 -->                 
                 <div class="row justify-content-center no-gutters mt-4 mb-4 mb-lg-5"> 
-                    <div class="col-xl">                          
+                    <div class="col-xl"> 
 </div>                     
                 </div>                 
             </div>             
         </section>         
         <!-- Signup Section -->         
         <section>
-            <center>
+            <center class="signup-section" id="signup">
                 <div class="text-center"> 
                     <h2 class="text-white mb-lg-3">Sign up for the alpha!</h2> 
                 </div>
@@ -237,7 +237,7 @@
         <div class="row"> 
 </div>         
         <!-- Contact Section -->         
-        <section class="contact-section bg-black"> 
+        <section class="bg-black contact-section"> 
             <div class="container"> 
                 <div class="row"> 
                     <div class="social d-flex justify-content-center col mt-5"> 
@@ -249,7 +249,7 @@
             </div>             
         </section>         
         <!-- Footer -->         
-        <footer class="bg-black small text-center text-white-50">
+        <footer class="bg-black small text-center text-white-50" id="contact">
             <div class="container" style="margin-top: 10; padding-bottom: 10;"> 
                 <p><i class="far fa-envelope"></i><a href="mailto:lucas@historiarealis.com"> lucas@historiarealis.com</a></p> 
                 <p><i>"Historia vero testis temporum, lux veritatis, vita memoriae, magistra vitae, nuntia vetustatis."</i></p>
